--- a/BlogDeneme/Web.config
+++ b/BlogDeneme/Web.config
@@ -61,7 +61,8 @@
 		</compilers>
 	</system.codedom>
 	<connectionStrings>
-		<add name="BlogDenemeEntities" connectionString="metadata=res://*/Models.Entity.Model1.csdl|res://*/Models.Entity.Model1.ssdl|res://*/Models.Entity.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ahmetyazbulursun.database.windows.net;initial catalog=BlogDeneme;persist security info=True;user id=ahmetyazbulursun;password=eroglu!1903;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<!--<add name="BlogDenemeEntities" connectionString="metadata=res://*/Models.Entity.Model1.csdl|res://*/Models.Entity.Model1.ssdl|res://*/Models.Entity.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-G6EAU16;initial catalog=BlogDeneme;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+		<add name="BlogDenemeEntities" connectionString="metadata=res://*/Models.Entity.Model1.csdl|res://*/Models.Entity.Model1.ssdl|res://*/Models.Entity.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-G6EAU16;initial catalog=BlogDeneme;persist security info=True;user id=ahmetyazbulursun;password=eroglu!1903;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
